2016-08-03 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/tlcs90/setjmp.s,
	  device/lib/tlcs90/memmove.s:
	  Avoid messing up interrupt flags via pop af.

2016-08-02 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_strstr.c:
	  Fix a warning.
	* src/SDCCmain.c:
	  Fix usage info, patch #274.
	* src/SDCCtree_dec.hpp:
	  Fix isolation of redundant nodes in the tree-decomposition.

2016-08-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (cseBBlock): Recompute data flow if any outgoing
	  expressions have been changed (fixed bug #2495)
	* src/hc08/gen.c (genCopy),
	* src/hc08/ralloc.c (packPointerOp): fixed bug #2357
	* support/regression/tests/bug-2357.c: re-enabled test for hc08/s08

2016-08-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/stm8/gen.c (regFree): Y is not free when using extended stack

2016-07-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genMinus): mark A as modified for reverse subtraction
	* src/z80/gen.c (genPointerGet,genUnpackBits): preserve pointer
	  register pair if not dead

2016-07-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/fwio.cc: try defining WINVER instead of _WIN32_WINNT
	* sim/ucsim/cmd.src/Makefile.in,
	* sim/ucsim/gui.src/Makefile.in,
	* sim/ucsim/sim.src/Makefile.in,
	* sim/ucsim/main_in.mk: omit -D option to ar, not supported by all ar

2016-07-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* SDCC.props: added ExecutablePath
	* src/ds390/gen.c,
	* src/SDCCutil.c,
	* src/SDCCval.c,
	* src/stm8/gen.c,
	* src/stm8/main.c,
	* src/z80/peep.c: fixed warnings

2016-07-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c:
	  Enable an optimization that was blocked on bug #2450.
	* src/SDCCtree_dec.hpp,
	  src/SDCCralloc.hpp:
	  Fix bug #2467 (fix previously was blocked on bug #2450).
	* src/z80/peeph-tlcs90.def:
	  Remove leftover z80 peepholes that break on tlcs90.

2016-07-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
